--- a/worldmap/public/css/worldmap-studio.css
+++ b/worldmap/public/css/worldmap-studio.css
@@ -1,3 +1,7 @@
+.dev-only {  /* comment out to get access to JSON editor tab panels  */
+    /*display:none !important;*/
+}
+
 .CodeMirror {
     height:270px !important;
 }
@@ -101,7 +105,7 @@ input.checkbox {
     display:inline !important;
 }
 #param-value, #param-min, #param-max {
-    width:25%;
+    width:30%;
 }
 .ui-dialog {
     padding: .3em;
