--- a/worldmap/public/css/worldmap-studio.css
+++ b/worldmap/public/css/worldmap-studio.css
@@ -1,5 +1,5 @@
-.dev-only {  /* comment out to get access to JSON editor tab panels  */
-    /*display:none !important;*/
+.dev-only {  /* comment out to get access to JSON (display only) tab panels  */
+    display:none !important;
 }
 
 .CodeMirror {
@@ -7,14 +7,14 @@
 }
 
 .prose-area .CodeMirror {
-    width: 400px !important;
-    height:180px !important;
+    width: 500px !important;
+    height:250px !important;
     border: none;
     background-color: #e5e5e5;
 }
 
 #prose-polygon-list {
-    max-height: 180px;
+    max-height: 250px;
     overflow: auto;
     width: 100%;
     height: 100%;
@@ -178,7 +178,7 @@ li[role=tab] {
   .scroll{
     overflow-y: scroll;
     border:2px solid lightgrey;
-    height: 175px;
+    height: 225px;
     position:relative;
   }
   .content {
