--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -41,7 +41,7 @@
                   </div>
               </div>
               <div id="tabs-3">
-                  <table width="100%" cellpadding="5px"><tr><td nowrap>
+                  <table width="100%" cellpadding="5px" style="margin-top:25px"><tr><td nowrap>
                       <div class="wrapper-comp-setting prose-area ">
                         <label class="label setting-label" for="prose">Prose</label>
                         <span class="tip setting-help">(html description of this module)</span>
@@ -51,7 +51,7 @@
                       </div>
                    </td><td nowrap>
                       <label style="width:50% !important" class="label setting-label" for="prose-polygon-list">Referenced Geometry</label>
-                      <span style="width:40%; text-align:right" class="tip setting-help"><button id="add-reference-geometry">Add a reference</button></span>
+                      <span style="width:150px; min-width:150px; text-align:right" class="tip setting-help"><button id="add-reference-geometry">Add a reference</button></span>
                       <ul id="prose-polygon-list"></ul>
                   </td></tr></table>
               </div>
