--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -162,6 +162,7 @@
             <label>Title<input type="text" id="layerControl-title" class="required text ui-widget-content ui-corner-all" placeholder="   user visible name (required)"></label>
             <span id="layerControl-key-span"><label>Layer ID<input type="text" id="layerControl-key" placeholder="   map's layer name (required)" class="required text ui-widget-content ui-corner-all"></label></span>
             <span id="layerControl-isFolder-span"><label id="layerControl-isFolder-label">Folder: <input type="checkbox" class="checkbox" id="layerControl-isFolder"></label></span>
+            <span id="layerControl-isVisible-span" style="display:inline;"><label>Visible:<input type="checkbox" class="checkbox" id="layerControl-isVisible"></label></span>
         </fieldset>
     </form>
 </div>
