--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -64,52 +64,59 @@
                  <table style="width:900px">
                      <tr>
                          <td colspan="2">
-                            <section>
-                                <div style="float:left;margin-right:10px;width:510px">
+                            <div style="float:left; width:530px;">
+                                <div style="float:left;margin-right:10px;width:530px">
                                     <label for="map-url" style="margin-left:0px !important;width:100%;" class="label setting-label">Map URL</label>
                                     <input type="text" id="map-url" style="width:100% !important;padding:0px;" placeholder="required" class="required text ui-widget-content ui-corner-all"/>
                                 </div>
-                                <div style="float:left;margin:3px 3px 0px 3px; padding:3px;border:1px solid darkgray" class="ui-corner-all">
-                                    <div style="float:left;margin-right:10px;width:120px">
-                                        <label for="center-lon" style="margin-left:0px !important;width:100%;" class="label setting-label">Center(longitude)</label>
-                                        <input type="text" id="center-lon" style="width:100% !important;padding:0px;" placeholder="required" class="required-number text ui-widget-content ui-corner-all"/>
-                                    </div>
-                                    <div style="float:left;margin-right:10px;width:120px">
-                                        <label for="center-lat" style="margin-left:0px !important;width:100%;" class="label setting-label">Center(latitude)</label>
-                                        <input type="text" id="center-lat" style="width:100% !important;padding:0px;" placeholder="required" class="required-number text ui-widget-content ui-corner-all"/>
-                                    </div>
-                                    <div style="float:left;margin-right:10px;width:50px;">
-                                        <label for="zoom" style="margin-left:0px !important;width:100%;min-width:10px;" class="label setting-label">Zoom</label>
-                                        <input type="text" id="zoom" style="width:100% !important;min-width:10px;padding:0px;" placeholder="req'd" class="required-integer text ui-widget-content ui-corner-all">
-                                    </div>
-                                    <div style="float:left;cursor:pointer;" id="map-view-helper">
-                                        <img title="map center/zoom helper" src="{{imagesRoot}}/globe-40x40.png"/>
+                                <div style="float:right">
+                                    <label class="dependent-property label setting-label" for="map-width">Width</label>
+                                    <input type="text" id="map-width" style="font-size:small;width:40px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
+                                    <label class="dependent-property label setting-label" for="map-height">Height</label>
+                                    <input type="text" id="map-height" style="font-size:small;width:40px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
+                                    <label class="dependent-property label setting-label" for="map-baseLayer">Base</label>
+                                    <input type="text" id="map-baseLayer" style="font-size:small;width:220px !important" title="Base Layer of map" placeholder="specify if needed" class="dependent-property text ui-widget-content ui-corner-all">
+                                    <label class="dependent-property label setting-label" for="map-debug">DBG</label>
+                                    <input type="checkbox" id="map-debug" title="enable debug mode" class="checkbox"/>
+                                </div>
+                            </div>
+                            <div style="float:right;width:318px;">
+                                <div style="float:left;margin:5px 16px 0px 3px; padding:5px;border:1px solid darkgray" class="ui-corner-all">
+                                    <span style="font-size: 70%;font-weight:bold; ">Viewport:</span>
+                                    <span style="min-width:120px">
+                                        <label style="text-align:right;" title="viewport stays across multiple visits to page" class="dependent-property label setting-label" for="map-sticky">User sticky</label>
+                                        <input type="checkbox" id="map-sticky" title="enable sticky pan/zoom" class="checkbox"/>
+                                    </span>
+                                    <div style="float:left">
+                                        <div style="float:left;margin-right:10px;width:70px">
+                                            <label for="center-lon" style="margin-left:0px !important;width:100%;" class="label setting-label">longitude</label>
+                                            <input type="text" id="center-lon" style="min-width:0px;width:100% !important;font-size:small;padding:0px;" placeholder="required" class="required-number text ui-widget-content ui-corner-all"/>
+                                        </div>
+                                        <div style="float:left;margin-right:10px;width:70px">
+                                            <label for="center-lat" style="margin-left:0px !important;width:100%;" class="label setting-label">latitude</label>
+                                            <input type="text" id="center-lat" style="min-width:0px;width:100% !important;font-size:small;padding:0px;" placeholder="required" class="required-number text ui-widget-content ui-corner-all"/>
+                                        </div>
+                                        <div style="float:left;margin-right:10px;width:50px;">
+                                            <label for="zoom" style="margin-left:0px !important;width:100%;min-width:10px;" class="label setting-label">zoom</label>
+                                            <input type="text" id="zoom" style="min-width:0px;width:100% !important;font-size:small;min-width:10px;padding:0px;" placeholder="req'd" class="required-integer text ui-widget-content ui-corner-all">
+                                        </div>
+                                        <div style="float:left;cursor:pointer;" id="map-view-helper">
+                                            <img title="map center/zoom helper" src="{{imagesRoot}}/globe-40x40.png"/>
+                                        </div>
                                     </div>
                                 </div>
-                            </section>
-                             <br style="clear:both;"/>
-                            <section>
-                                <label class="dependent-property label setting-label" for="map-width">Width</label>
-                                <input type="text" id="map-width" style="width:70px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
-                                <label class="dependent-property label setting-label" for="map-height">Height</label>
-                                <input type="text" id="map-height" style="width:70px !important;" placeholder="required" class="required-integer dependent-property text ui-widget-content ui-corner-all">
-                                <label class="dependent-property label setting-label" for="map-baseLayer">Base Layer</label>
-                                <input type="text" id="map-baseLayer" style="width:290px !important" placeholder="specify if needed" class="dependent-property text ui-widget-content ui-corner-all">
-                                <label class="dependent-property label setting-label" for="map-debug">Debug</label>
-                                <input type="checkbox" id="map-debug" class="checkbox"/>
-                            </section>
-                            <hr/>
+                            </div>
                          </td>
                      </tr>
                      <tr>
-                         <td style="padding-right:15px; width: 65%;" >
+                         <td style="padding:15px 15px 0px 0px; width: 65%;" >
                             <label class="label setting-label" for="layer-control" style="width:70%;">Layer Controls (drag to reorder)</label>
                             <span style="width:26% !important; min-width:inherit; text-align:right" class="tip setting-help"><button disabled id="new-node">New node</button></span>
                             <div id="layer-control" class="scroll" style="height:165px">
                                 <div id="layer-controls"/>
                             </div>
                          </td>
-                         <td style="width:35%;">
+                         <td style="padding:15px 15px 0px 0px;width:35%;">
                              <label class="label setting-label" style="width:40% !important;margin-right:0px;" for="sliders">Sliders</label>
                              <span style="width:49% !important; min-width:inherit; text-align:right" class="tip setting-help"><button id="new-slider">New slider</button></span>
                              <ul id="sliders" class="scroll" />
