--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -305,7 +305,7 @@
                         </td>
                         <td style="width:60%">
                             <label for="worldmap_constraint_{{uniqueId}}" id="constraint-type-label">
-                                Specify
+                                Constraint geometry:
                                 <select name="constraintGeometryType" id="constraint-geometry-type" class="select ui-widget-content ui-corner-all">
                                     <option value="point">Point</option>
                                     <option value="polyline">Polyline</option>
