--- a/worldmap/public/css/worldmap-studio.css
+++ b/worldmap/public/css/worldmap-studio.css
@@ -179,6 +179,7 @@ li[role=tab] {
       padding: 0.4em;
       padding-left: 1.5em;
       font-size: 1.4em;
+      width:95%;
       height: 18px;
   }
   #sortable-questions li span {
@@ -212,10 +213,10 @@ li[role=tab] {
 
 #dialog-question-detail #new-constraint {
     float: right;
-    margin-right:50px;
+    margin-right:0px;
 }
 #dialog-question-detail #constraint-list-wrapper {
-    padding-left:70px;
+    padding-left:20px;
     padding-top:10px;
 }
 #dialog-question-detail #explanation {
