--- a/worldmap/templates/html/worldmap-studio.html
+++ b/worldmap/templates/html/worldmap-studio.html
@@ -291,8 +291,10 @@
                     </tr>
                     <tr>
                         <td style="width:40%">
-                            <label for="constraint-percentOfGrade">Score weight</label>
-                            <input type="text" name="constraintPercentOfGrade" id="constraint-percentOfGrade" value="" class="required required-number text ui-widget-content ui-corner-all">
+                            <span id="constraint-percentOfGrade-span">
+                                <label for="constraint-percentOfGrade">% deducted from score</label>
+                                <input type="text" name="constraintPercentOfGrade" id="constraint-percentOfGrade" value="" class="required required-number text ui-widget-content ui-corner-all">
+                            </span>
                             <span id="constraint-percentMatch-span">
                                <label for="constraint-percentMatch">Percent match</label>
                                <input type="text" id="constraint-percentMatch" value="" class="required required-number text ui-widget-content ui-corner-all">
